--- a/notebooks/Unificar Datasets.ipynb
+++ b/notebooks/Unificar Datasets.ipynb
@@ -21,8 +21,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\guard\\AppData\\Local\\Temp\\ipykernel_7468\\3507477234.py:2: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df_mo = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/Datasets Procesados/movies_dataset_procesado.csv\", sep=\",\")\n"
+      "C:\\Users\\guard\\AppData\\Local\\Temp\\ipykernel_8120\\865345373.py:2: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df_mo = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/movies_dataset_procesado.csv\", sep=\",\")\n"
      ]
     },
     {
@@ -154,7 +154,7 @@
    ],
    "source": [
     "#Cargamos la base de datos 'movies_dataset_procesado'\n",
-    "df_mo = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/Datasets Procesados/movies_dataset_procesado.csv\", sep=\",\")\n",
+    "df_mo = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/movies_dataset_procesado.csv\", sep=\",\")\n",
     "\n",
     "df_mo.head(2)"
    ]
@@ -224,7 +224,7 @@
    ],
    "source": [
     "#Cargamos la base de datos 'credits_dataset_procesado'\n",
-    "df_cr = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/Datasets Procesados/credits_dataset_procesado.csv\", sep=\",\")\n",
+    "df_cr = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/credits_dataset_procesado.csv\", sep=\",\")\n",
     "\n",
     "df_cr.head(2)"
    ]
@@ -555,6 +555,65 @@
    ],
    "source": [
     "df_merged.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original_language\n",
+      "en    32221\n",
+      "fr     2440\n",
+      "it     1528\n",
+      "ja     1352\n",
+      "de     1080\n",
+      "      ...  \n",
+      "uz        1\n",
+      "mt        1\n",
+      "hy        1\n",
+      "lb        1\n",
+      "si        1\n",
+      "Name: count, Length: 90, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Contar los valores únicos en la columna 'original_language' y su respectivo conteo\n",
+    "language_counts = df_merged['original_language'].value_counts()\n",
+    "\n",
+    "print(language_counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a reducir el dataset porque la matriz resultado del Score de similaridad a partir de los títulos queda muy grande y por lo tanto al momento de cargar el archivo en Render este no termina de hacer el deploy, posiblemente cambiando la dimensionalidad del dataset podremos resolver este inconveniente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtrar el DataFrame para mantener solo las filas donde 'original_language' sea 'en' o 'fr'\n",
+    "df_filtered = df_merged[df_merged['original_language'].isin(['en', 'fr'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardar el DataFrame filtrado en un nuevo archivo CSV si lo deseas\n",
+    "df_filtered.to_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado.csv\", index=False)"
    ]
   },
   {
