Actualización de modelo

--- a/notebooks/Modelado.ipynb
+++ b/notebooks/Modelado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -65,16 +65,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>30000000.0</td>\n",
-       "      <td>862</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>76600</td>\n",
        "      <td>en</td>\n",
-       "      <td>21.946943</td>\n",
-       "      <td>1995-10-30</td>\n",
-       "      <td>373554033.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5415.0</td>\n",
+       "      <td>6.020055</td>\n",
+       "      <td>2020-12-16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Avatar 2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>58.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -83,22 +83,22 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Animation, Comedy, FamilyAnimation, Comedy, Fa...</td>\n",
-       "      <td>Tom Hanks, Tim Allen, Don Rickles, Jim Varney,...</td>\n",
-       "      <td>John Lasseter, Roman Figun, Desirée Mourad</td>\n",
+       "      <td>Action, Adventure, Fantasy, Science FictionAct...</td>\n",
+       "      <td>Sin Datos</td>\n",
+       "      <td>Sin Datos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>65000000.0</td>\n",
-       "      <td>8844</td>\n",
+       "      <td>12000000.0</td>\n",
+       "      <td>299782</td>\n",
        "      <td>en</td>\n",
-       "      <td>17.015539</td>\n",
-       "      <td>1995-12-15</td>\n",
-       "      <td>262797249.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>2413.0</td>\n",
+       "      <td>0.238154</td>\n",
+       "      <td>2018-12-31</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -107,9 +107,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>Adventure, Fantasy, FamilyAdventure, Fantasy, ...</td>\n",
-       "      <td>Robin Williams, Jonathan Hyde, Kirsten Dunst, ...</td>\n",
-       "      <td>Joe Johnston</td>\n",
+       "      <td>Comedy, DramaComedy, Drama</td>\n",
+       "      <td>Sin Datos</td>\n",
+       "      <td>Sin Datos</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -117,71 +117,50 @@
        "</div>"
       ],
       "text/plain": [
-       "       budget    id original_language  popularity release_date      revenue  \\\n",
-       "0  30000000.0   862                en   21.946943   1995-10-30  373554033.0   \n",
-       "1  65000000.0  8844                en   17.015539   1995-12-15  262797249.0   \n",
+       "       budget      id original_language  popularity release_date  revenue  \\\n",
+       "0         0.0   76600                en    6.020055   2020-12-16      0.0   \n",
+       "1  12000000.0  299782                en    0.238154   2018-12-31      0.0   \n",
        "\n",
-       "   runtime      title  vote_average  vote_count  ...  TV Movie  \\\n",
-       "0     81.0  Toy Story           7.7      5415.0  ...         0   \n",
-       "1    104.0    Jumanji           6.9      2413.0  ...         0   \n",
+       "   runtime                       title  vote_average  vote_count  ...  \\\n",
+       "0      0.0                    Avatar 2           0.0        58.0  ...   \n",
+       "1      0.0  The Other Side of the Wind           0.0         1.0  ...   \n",
        "\n",
-       "   Telescene Film Group Productions  The Cartel  Thriller  \\\n",
-       "0                                 0           0         0   \n",
-       "1                                 0           0         0   \n",
+       "   TV Movie  Telescene Film Group Productions  The Cartel  Thriller  \\\n",
+       "0         0                                 0           0         0   \n",
+       "1         0                                 0           0         0   \n",
        "\n",
        "   Vision View Entertainment  War  Western  \\\n",
        "0                          0    0        0   \n",
        "1                          0    0        0   \n",
        "\n",
-       "                                            genres_1  \\\n",
-       "0  Animation, Comedy, FamilyAnimation, Comedy, Fa...   \n",
-       "1  Adventure, Fantasy, FamilyAdventure, Fantasy, ...   \n",
+       "                                            genres_1  cast_names  \\\n",
+       "0  Action, Adventure, Fantasy, Science FictionAct...   Sin Datos   \n",
+       "1                         Comedy, DramaComedy, Drama   Sin Datos   \n",
        "\n",
-       "                                          cast_names  \\\n",
-       "0  Tom Hanks, Tim Allen, Don Rickles, Jim Varney,...   \n",
-       "1  Robin Williams, Jonathan Hyde, Kirsten Dunst, ...   \n",
-       "\n",
-       "                              directing_names  \n",
-       "0  John Lasseter, Roman Figun, Desirée Mourad  \n",
-       "1                                Joe Johnston  \n",
+       "   directing_names  \n",
+       "0        Sin Datos  \n",
+       "1        Sin Datos  \n",
        "\n",
        "[2 rows x 47 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Cargamos la base de datos 'dataset_filtrado'\n",
-    "df_filtered = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado.csv\", sep=\",\")\n",
+    "df_filtered = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_5000.csv\", sep=\",\")\n",
     "\n",
     "df_filtered.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 8.95 GiB for an array with shape (34661, 34661) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m tfidf_matrix \u001b[38;5;241m=\u001b[39m tfidf\u001b[38;5;241m.\u001b[39mfit_transform(df_filtered[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitle\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Cálculo de Similaridad - Utilizar la similaridad del coseno\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m cosine_sim \u001b[38;5;241m=\u001b[39m \u001b[43mcosine_similarity\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtfidf_matrix\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtfidf_matrix\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\guard\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\_param_validation.py:213\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    207\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    208\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m    209\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m    210\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m    211\u001b[0m         )\n\u001b[0;32m    212\u001b[0m     ):\n\u001b[1;32m--> 213\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    214\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    215\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[0;32m    217\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[0;32m    218\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[0;32m    219\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[0;32m    220\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    221\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    222\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[0;32m    223\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\guard\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\metrics\\pairwise.py:1687\u001b[0m, in \u001b[0;36mcosine_similarity\u001b[1;34m(X, Y, dense_output)\u001b[0m\n\u001b[0;32m   1684\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1685\u001b[0m     Y_normalized \u001b[38;5;241m=\u001b[39m normalize(Y, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m-> 1687\u001b[0m K \u001b[38;5;241m=\u001b[39m \u001b[43msafe_sparse_dot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_normalized\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mY_normalized\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdense_output\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdense_output\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1689\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m K\n",
-      "File \u001b[1;32mc:\\Users\\guard\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\extmath.py:213\u001b[0m, in \u001b[0;36msafe_sparse_dot\u001b[1;34m(a, b, dense_output)\u001b[0m\n\u001b[0;32m    205\u001b[0m     ret \u001b[38;5;241m=\u001b[39m a \u001b[38;5;241m@\u001b[39m b\n\u001b[0;32m    207\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[0;32m    208\u001b[0m     sparse\u001b[38;5;241m.\u001b[39missparse(a)\n\u001b[0;32m    209\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m sparse\u001b[38;5;241m.\u001b[39missparse(b)\n\u001b[0;32m    210\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m dense_output\n\u001b[0;32m    211\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(ret, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoarray\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    212\u001b[0m ):\n\u001b[1;32m--> 213\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mret\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtoarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    214\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m ret\n",
-      "File \u001b[1;32mc:\\Users\\guard\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\sparse\\_compressed.py:1181\u001b[0m, in \u001b[0;36m_cs_matrix.toarray\u001b[1;34m(self, order, out)\u001b[0m\n\u001b[0;32m   1179\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m out \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m order \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1180\u001b[0m     order \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_swap(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcf\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m-> 1181\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_process_toarray_args\u001b[49m\u001b[43m(\u001b[49m\u001b[43morder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1182\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (out\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mc_contiguous \u001b[38;5;129;01mor\u001b[39;00m out\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mf_contiguous):\n\u001b[0;32m   1183\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOutput array must be C or F contiguous\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\guard\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\sparse\\_base.py:1301\u001b[0m, in \u001b[0;36m_spbase._process_toarray_args\u001b[1;34m(self, order, out)\u001b[0m\n\u001b[0;32m   1299\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m out\n\u001b[0;32m   1300\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1301\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 8.95 GiB for an array with shape (34661, 34661) and data type float64"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Preprocesamiento de Datos - Utilizando 'title' para la recomendación\n",
     "df_filtered['title'] = df_filtered['title'].fillna('')\n",
@@ -194,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,27 +183,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3000              Toy Story 2\n",
-      "15371             Toy Story 3\n",
-      "4802                  The Toy\n",
-      "16178                 The Toy\n",
-      "21937    Toy Story of Terror!\n",
-      "Name: title, dtype: object\n"
+      "['Out of Love', 'After Love', 'Up for Love', 'Down by Love', 'Anything for Love']\n"
      ]
     }
    ],
    "source": [
-    "def get_recommendations(title, cosine_sim, df_merged):\n",
+    "def get_recommendations(title, cosine_sim, df_filtered):\n",
+    "    # Normalizar el título\n",
+    "    title = title.strip().lower()  # Eliminar espacios y convertir a minúsculas\n",
+    "    \n",
     "    # Obtener el índice de la película que coincide con el título\n",
-    "    idx = df_filtered[df_filtered['title'] == title].index[0]\n",
+    "    matching_movies = df_filtered[df_filtered['title'].str.lower().str.contains(title)]\n",
+    "    \n",
+    "    if matching_movies.empty:\n",
+    "        raise ValueError(f\"No se encontró ninguna película con el título: '{title}'\")\n",
     "\n",
+    "    idx = matching_movies.index[0]\n",
+    "    \n",
     "    # Obtener las puntuaciones de similaridad para esa película\n",
     "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
     "\n",
@@ -232,16 +214,16 @@
     "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
     "\n",
     "    # Obtener las puntuaciones de las 5 películas más similares\n",
-    "    sim_scores = sim_scores[1:6]\n",
+    "    sim_scores = sim_scores[1:6]  # Cambiado a 5\n",
     "\n",
     "    # Obtener los índices de las películas\n",
     "    movie_indices = [i[0] for i in sim_scores]\n",
     "\n",
     "    # Devolver los títulos de las películas recomendadas\n",
-    "    return df_filtered['title'].iloc[movie_indices]\n",
+    "    return df_filtered['title'].iloc[movie_indices].tolist()\n",
     "\n",
-    "# Ejemplo de uso: Obtener recomendaciones para una película específica\n",
-    "print(get_recommendations('Batman', cosine_sim, df_filtered))"
+    "\n",
+    "print(get_recommendations('Love', cosine_sim, df_filtered))"
    ]
   }
  ],
