--- a/notebooks/Unificar Datasets.ipynb
+++ b/notebooks/Unificar Datasets.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\guard\\AppData\\Local\\Temp\\ipykernel_8120\\865345373.py:2: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\guard\\AppData\\Local\\Temp\\ipykernel_13620\\865345373.py:2: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_mo = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/movies_dataset_procesado.csv\", sep=\",\")\n"
      ]
     },
@@ -561,32 +561,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "original_language\n",
-      "en    32221\n",
-      "fr     2440\n",
-      "it     1528\n",
-      "ja     1352\n",
-      "de     1080\n",
-      "      ...  \n",
-      "uz        1\n",
-      "mt        1\n",
-      "hy        1\n",
-      "lb        1\n",
-      "si        1\n",
-      "Name: count, Length: 90, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Contar los valores únicos en la columna 'original_language' y su respectivo conteo\n",
-    "language_counts = df_merged['original_language'].value_counts()\n",
-    "\n",
-    "print(language_counts)"
+    "# Exportar el DataFrame a un archivo CSV\n",
+    "df_merged.to_csv('dataset_unificado.csv', index=False)  # index=True incluye el índice en el archivo CSV"
    ]
   },
   {
@@ -598,32 +576,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Filtrar el DataFrame para mantener solo las filas donde 'original_language' sea 'en' o 'fr'\n",
-    "df_filtered = df_merged[df_merged['original_language'].isin(['en', 'fr'])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Guardar el DataFrame filtrado en un nuevo archivo CSV si lo deseas\n",
-    "df_filtered.to_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset reducido a las 5000 películas más recientes y guardado como 'dataset_filtrado_5000.csv'\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exportar el DataFrame a un archivo CSV\n",
-    "df_merged.to_csv('dataset_unificado.csv', index=False)  # index=True incluye el índice en el archivo CSV"
+    "# Asegurar de que la columna 'release_date' está en formato de fecha\n",
+    "df_merged['release_date'] = pd.to_datetime(df_merged['release_date'], errors='coerce')\n",
+    "\n",
+    "# Eliminar filas con fechas inválidas\n",
+    "df_merged = df_merged.dropna(subset=['release_date'])\n",
+    "\n",
+    "# Ordenar el DataFrame por 'release_date' en orden descendente y seleccionar las 5000 películas más recientes\n",
+    "df_filtered = df_merged.sort_values(by='release_date', ascending=False).head(5000)\n",
+    "\n",
+    "# Guardar el DataFrame filtrado en un nuevo archivo CSV si lo deseas\n",
+    "df_filtered.to_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_5000.csv\", index=False)\n",
+    "\n",
+    "print(\"Dataset reducido a las 5000 películas más recientes y guardado como 'dataset_filtrado_5000.csv'\")\n"
    ]
   }
  ],
