--- a/notebooks/Modelado.ipynb
+++ b/notebooks/Modelado.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -144,21 +144,21 @@
        "[2 rows x 47 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Cargamos la base de datos 'dataset_filtrado'\n",
-    "df_filtered = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_5000.csv\", sep=\",\")\n",
+    "df_filtered = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_25000.csv\", sep=\",\")\n",
     "\n",
     "df_filtered.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Out of Love', 'After Love', 'Up for Love', 'Down by Love', 'Anything for Love']\n"
+      "['Toy Story 3', 'Toy Story 2', 'Toy Story of Terror!', 'Toy Reanimator', 'One More Time']\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
     "    return df_filtered['title'].iloc[movie_indices].tolist()\n",
     "\n",
     "\n",
-    "print(get_recommendations('Love', cosine_sim, df_filtered))"
+    "print(get_recommendations('Toy Story', cosine_sim, df_filtered))"
    ]
   }
  ],
