--- a/notebooks/Unificar Datasets.ipynb
+++ b/notebooks/Unificar Datasets.ipynb
@@ -576,14 +576,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset reducido a las 5000 películas más recientes y guardado como 'dataset_filtrado_5000.csv'\n"
+      "Dataset reducido a las 5000 películas más recientes y guardado como 'dataset_filtrado_30000.csv'\n"
      ]
     }
    ],
@@ -594,13 +594,13 @@
     "# Eliminar filas con fechas inválidas\n",
     "df_merged = df_merged.dropna(subset=['release_date'])\n",
     "\n",
-    "# Ordenar el DataFrame por 'release_date' en orden descendente y seleccionar las 5000 películas más recientes\n",
-    "df_filtered = df_merged.sort_values(by='release_date', ascending=False).head(5000)\n",
+    "# Ordenar el DataFrame por 'release_date' en orden descendente y seleccionar las 25000 películas más recientes\n",
+    "df_filtered = df_merged.sort_values(by='release_date', ascending=False).head(25000)\n",
     "\n",
-    "# Guardar el DataFrame filtrado en un nuevo archivo CSV si lo deseas\n",
-    "df_filtered.to_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_5000.csv\", index=False)\n",
+    "# Guardar el DataFrame filtrado en un nuevo archivo CSV\n",
+    "df_filtered.to_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_25000.csv\", index=False)\n",
     "\n",
-    "print(\"Dataset reducido a las 5000 películas más recientes y guardado como 'dataset_filtrado_5000.csv'\")\n"
+    "print(\"Dataset reducido a las 5000 películas más recientes y guardado como 'dataset_filtrado_25000.csv'\")\n"
    ]
   }
  ],
