--- a/notebooks/Modelado.ipynb
+++ b/notebooks/Modelado.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -144,21 +144,21 @@
        "[2 rows x 47 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Cargamos la base de datos 'dataset_filtrado'\n",
-    "df_filtered = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_15000.csv\", sep=\",\")\n",
+    "df_filtered = pd.read_csv(\"C:/Users/guard/OneDrive/Desktop/Henry Data Science/Proyecto MLOps/datasets/dataset_filtrado_10000.csv\", sep=\",\")\n",
     "\n",
     "df_filtered.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Toy Story 3', 'Toy Story 2', 'Toy Story of Terror!', 'Toy Reanimator', 'One More Time']\n"
+      "['Toy Story of Terror!', 'One More Time', 'Back in Time', 'About Time', 'Time Please']\n"
      ]
     }
    ],
